BUILD: Add IHelper interface