@@ -12,11 +12,11 @@
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-  </properties>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	    <maven.compiler.source>17</maven.compiler.source>
+	    <maven.compiler.target>17</maven.compiler.target>
+  	</properties>
 
 	<dependencies>
 	    <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
@@ -31,7 +31,6 @@
 		    <groupId>org.testng</groupId>
 		    <artifactId>testng</artifactId>
 		    <version>7.8.0</version>
-		    <scope>test</scope>
 		</dependency>
 		
 		<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
@@ -90,12 +89,47 @@
           <version>3.0.2</version>
         </plugin>
         <plugin>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.0</version>
+			<groupId>org.apache.maven.plugins</groupId>
+	        <artifactId>maven-compiler-plugin</artifactId>
+	        <version>3.11.0</version>
+	        <configuration>
+		        <fork>true</fork>
+		        <compilerArgs>
+		            <arg>-Xlint:all</arg>
+		            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+		            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+		            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+		            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+		            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+		            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+		            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+		            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+		            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+		            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
+		        </compilerArgs>
+		        <!--for unmappable characters in classes-->
+		        <encoding>UTF-8</encoding>
+		        <showDeprecation>true</showDeprecation>
+		        <showWarnings>true</showWarnings>
+		        <!--for lombok annotations to resolve-->
+		        <!--contradictory to maven, intelliJ fails with this-->
+		        <annotationProcessorPaths>
+		            <path>
+		                <groupId>org.projectlombok</groupId>
+		                <artifactId>lombok</artifactId>
+		                <version>1.18.16</version>
+		            </path>
+		        </annotationProcessorPaths>
+		    </configuration>
         </plugin>
         <plugin>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.1</version>
+          	<artifactId>maven-surefire-plugin</artifactId>
+          	<version>2.22.1</version>
+          	<configuration>
+			    <suiteXmlFiles>
+			        <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
+			    </suiteXmlFiles>
+			</configuration> 
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
